--- a/PizzaBox.Data/PizzaBox.Data.csproj
+++ b/PizzaBox.Data/PizzaBox.Data.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameWorkCore" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameWorkCore.Design" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameWorkCore.SqlServer" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameWorkCore.Tools" Version="2.2.6">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
